<resources>
    <string name="app_name">AndroidClient</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="sign_up_link_text">Sign Up</string>
    <string name="sign_in_page_header_text">Sign in to your account</string>
    <string name="sign_in_page_button_text">Continue</string>
    <string name="incorrect_login_details">incorrect username or password</string>
    <string name="connection_error">error connecting to server</string>
    <string name="invalid_username">username can not be empty</string>

    <string name="password_not_long_enough">password must be at least 8 characters</string>
    <string name="password_no_letters">password must contain at least one letter</string>
    <string name="password_no_numbers">password must contain at least one number</string>

    <string name="confirm_password_doesnt_match">confirm password doesn\'t match</string>

    <string name="invalid_display_name">display name can not be empty</string>

    <string name="invalid_profile_picture">please input a profile picture</string>





    <string name="btnAddContact">Add Contact</string>
    <string name="etPassword">Password</string>
    <string name="etUsername">Username</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="registerPageTitle">Create Your Account</string>
    <string name="sign_in_header_text">Create Your Account</string>
    <string name="sign_in_button_text">create account</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="login_link_text">login</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_display_name">Display name</string>
    <string name="default_server_url">http://10.0.2.2:5000/</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="enter_server_url">Enter Server URL</string>
    <string name="apply_settings_button_text">Apply and Exit</string>
    <string name="base64_image_prefix">data:image/png;base64,</string>
</resources>