<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_in_header_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_et_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_register"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_username"
            android:minHeight="48dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/password_et_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_et_register"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/confirm_password_et_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_et_register"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_confirm_password"
            android:minHeight="48dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/display_name_et_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password_et_register"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:layout_centerInParent="true"
            android:hint="@string/prompt_display_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/select_image_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/display_name_et_register"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_add"/>
<!--            android:backgroundTint="@color/light_purple" />-->

        <androidx.cardview.widget.CardView
            android:id="@+id/image_container_card_view_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/select_image_btn_register"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:cardCornerRadius="250dp"
            android:visibility="gone" >
<!--            app:cardBackgroundColor="@color/light_purple"-->


            <androidx.cardview.widget.CardView
                android:layout_width="147dp"
                android:layout_height="147dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/selected_image_iv_register"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submit_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_container_card_view_register"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in_button_text"/>
<!--            android:textColor="@android:color/white" />-->


        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/submit_button_register"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/signup_text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_link_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/login_link_text"
                android:textColor="@color/light_purple"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>